# pyepic

./: LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: python-publish.yml
docs/: requirements.txt
docs/source/: conf.py  examples.rst  faq.rst  getting_started.rst  index.rst  modules.rst  pyepic.applications.rst  pyepic.client.rst  pyepic.desktops.rst  pyepic.rst
docs/source/_build/html/: .buildinfo  applications.html  client.html  foam_example.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/source/_build/html/.doctrees/: applications.doctree  client.doctree  environment.pickle  foam_example.doctree  index.doctree  modules.doctree
docs/source/_build/html/_sources/: applications.rst.txt  foam_example.rst.txt  index.rst.txt  modules.rst.txt
examples/: jupyter_notebook.ipynb
pyepic/: __init__.py
pyepic/applications/: base.py  msc_nastran.py  openfoam.py  zcfd.py  zopt.py
pyepic/client/: __init__.py  base.py  catalog.py  client.py  data.py  desktop.py  job.py  projects.py  teams.py
pyepic/desktops/: __init__.py  desktop.py
