[metadata]
name = pyepic
description = "Python SDK for EPIC"
author = "Zenotech"
author_email = "support@zenotech.com"
Home-page = https://github.com/zenotech/pyepic/
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
include_package_data = True
install_requires =
    epiccore>=0.0.21
    boto3>=1.16.57
